first migration, database created v1

--- a/PreAcademicInfoBack/PreAcademicInfo/appsettings.json
+++ b/PreAcademicInfoBack/PreAcademicInfo/appsettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
@@ -11,5 +11,8 @@
         "Default": "Warning"
       }
     }
+  },
+  "ConnectionStrings": {
+    "StudentContext": "Server=(localdb)\\mssqllocaldb;Database=StudentContext-2433387b-e465-4c6e-baa7-314eb1aac8c5;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
