--- a/PreAcademicInfoBack/PreAcademicInfo/PreAcademicInfo.csproj
+++ b/PreAcademicInfoBack/PreAcademicInfo/PreAcademicInfo.csproj
@@ -5,12 +5,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20181105221942_Initial.cs" />
+    <Compile Remove="Migrations\20181105221942_Initial.Designer.cs" />
+    <Compile Remove="Migrations\20181105222247_SecondMigration.cs" />
+    <Compile Remove="Migrations\20181105222247_SecondMigration.Designer.cs" />
+    <Compile Remove="Migrations\20181105223159_ThirdMigration.cs" />
+    <Compile Remove="Migrations\20181105223159_ThirdMigration.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Views\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.2" />
   </ItemGroup>
 
   <ItemGroup>
