--- a/PreAcademicInfoBack/PreAcademicInfo/appsettings.json
+++ b/PreAcademicInfoBack/PreAcademicInfo/appsettings.json
@@ -13,6 +13,7 @@
     }
   },
   "ConnectionStrings": {
-    "StudentContext": "Server=(localdb)\\mssqllocaldb;Database=StudentContext-2433387b-e465-4c6e-baa7-314eb1aac8c5;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "StudentContext": "Server=(localdb)\\mssqllocaldb;Database=StudentContext-2433387b-e465-4c6e-baa7-314eb1aac8c5;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "UsersContext": "Server=(localdb)\\mssqllocaldb;Database=UsersContext-4c348bdf-74e4-4598-80f8-886878d21fde;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
