--- a/PreAcademicInfoBack/PreAcademicInfo/appsettings.json
+++ b/PreAcademicInfoBack/PreAcademicInfo/appsettings.json
@@ -14,6 +14,8 @@
   },
   "ConnectionStrings": {
     "StudentContext": "Server=(localdb)\\mssqllocaldb;Database=StudentContext-2433387b-e465-4c6e-baa7-314eb1aac8c5;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "UsersContext": "Server=(localdb)\\mssqllocaldb;Database=UsersContext-4c348bdf-74e4-4598-80f8-886878d21fde;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "UsersContext": "Server=(localdb)\\mssqllocaldb;Database=UsersContext-4c348bdf-74e4-4598-80f8-886878d21fde;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AdminsContext": "Server=(localdb)\\mssqllocaldb;Database=AdminsContext-8fe82b40-8fea-46c7-8fef-8d840549210a;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "TeachersContext": "Server=(localdb)\\mssqllocaldb;Database=TeachersContext-2f3cd772-6f63-4c75-9549-09544381931c;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
