--- a/PreAcademicInfoBack/PreAcademicInfo/PreAcademicInfo.csproj
+++ b/PreAcademicInfoBack/PreAcademicInfo/PreAcademicInfo.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="3.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.2" />
   </ItemGroup>
 
