--- a/PreAcademicInfoFront/webapp/package.json
+++ b/PreAcademicInfoFront/webapp/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "^7.0.4",
+    "@angular/fire": "^5.1.1",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
     "@angular/material": "^7.0.2",
@@ -25,6 +26,7 @@
     "@angular/router": "~7.0.0",
     "@auth0/angular-jwt": "^1.2.0",
     "core-js": "^2.5.4",
+    "firebase": "^5.7.3",
     "hammerjs": "^2.0.8",
     "moment": "^2.22.2",
     "rxjs": "~6.3.3",
@@ -36,9 +38,9 @@
     "@angular/cli": "~7.0.3",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -48,6 +50,7 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
+    "stripe-angular": "^0.3.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.1"
