--- a/PreAcademicInfoFront/webapp/package.json
+++ b/PreAcademicInfoFront/webapp/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "@auth0/angular-jwt": "^1.2.0",
+    "angular-captcha": "^3.4.1",
     "core-js": "^2.5.4",
     "firebase": "^5.7.3",
     "hammerjs": "^2.0.8",
@@ -34,7 +35,7 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular-devkit/build-angular": "^0.12.2",
     "@angular/cli": "~7.0.3",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
@@ -49,6 +50,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "node-sass": "^4.11.0",
     "protractor": "~5.4.0",
     "stripe-angular": "^0.3.0",
     "ts-node": "~7.0.0",
