--- a/PreAcademicInfoFront/webapp/package.json
+++ b/PreAcademicInfoFront/webapp/package.json
@@ -26,10 +26,12 @@
     "@angular/router": "~7.0.0",
     "@auth0/angular-jwt": "^1.2.0",
     "angular-captcha": "^3.4.1",
-    "core-js": "^2.5.4",
+    "angular-notifier": "^4.1.1",
+    "core-js": "^2.6.2",
     "firebase": "^5.7.3",
     "hammerjs": "^2.0.8",
     "moment": "^2.22.2",
+    "ng6-toastr-notifications": "^1.0.4",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.3.3",
     "zone.js": "~0.8.26"
