Added fill database functions working properly with files

--- a/AcademicInfoServer/AcademicInfoServer/appsettings.json
+++ b/AcademicInfoServer/AcademicInfoServer/appsettings.json
@@ -13,6 +13,6 @@
     }
   },
   "ConnectionStrings": {
-    "DatabaseContext": "Server=(localdb)\\mssqllocaldb;Database=DatabaseContext-f53c1771-2ac0-4b18-b1ce-9cadfb77db79;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DatabaseContext": "Server=.;Database=DatabaseContext;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
