--- a/PreAcademicInfoFront/webapp/package.json
+++ b/PreAcademicInfoFront/webapp/package.json
@@ -27,6 +27,7 @@
     "@auth0/angular-jwt": "^1.2.0",
     "angular-captcha": "^3.4.1",
     "angular-notifier": "^4.1.1",
+    "confirm-dialog": "^0.1.2",
     "core-js": "^2.6.2",
     "firebase": "^5.7.3",
     "hammerjs": "^2.0.8",
